# pulse-code

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  release.yml
docs/: building-xml-queries.md
docs/demo/: pulse-demo.tape
site/: generate.py
src/pulse/: __init__.py  __main__.py  catalog.py  cli.py  llm_builder.py  matcher.py  wonder_client.py
src/pulse/data/: catalog.json  queries_index.json  variable_labels.json
src/pulse/queries/: aids-cases-by-year-1981-1999-req.xml  births-by-year-1995-2002-req.xml  births-by-year-2003-2006-req.xml  births-by-year-2007-2024-req.xml  cancer-incidence-by-site-by-year-1999-2022-req.xml  cancer-mortality-by-site-by-year-2018-2023-req.xml  covid-deaths-by-race-2020-2023-req.xml  drug-deaths-by-month-1999-2020-req.xml  drug-deaths-by-month-2018-2024-req.xml  drug-deaths-by-year-1999-2020-req.xml  drug-deaths-by-year-2018-2024-req.xml  fentanyl-deaths-by-month-1999-2020-req.xml  fentanyl-deaths-by-month-2018-2024-req.xml  fetal-deaths-by-cause-by-year-2014-2024-req.xml  fetal-deaths-by-year-2005-2024-req.xml  heart-vs-cancer-by-sex-2018-2023-req.xml  heat-wave-days-by-county-req.xml  infant-mortality-2018-2023-req.xml  infant-mortality-by-cause-by-year-2007-2023-req.xml  maternal-mortality-by-year-1999-2020-req.xml  (+16 more)
tests/: conftest.py
tests/integration/: _servers.py  conftest.py  test_llm_provider_live.py  test_socks_proxy_integration.py
tests/unit/: test_catalog.py  test_cli.py  test_llm_builder.py  test_matcher.py  test_wonder_client.py
(+30 files in other folders)
