[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-code"
version = "1.0.1"
description = "CDC WONDER query CLI — explore, build, and refine public health data queries"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic==0.115.1",
    "openai==2.44.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "rich==15.0.0",
    "socksio==1.0.0",
    "typer==0.26.8",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulse = ["data/*.json", "templates/*.xml", "queries/*.xml"]

[project.scripts]
pulse = "pulse.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: exercises real sockets (localhost SOCKS/HTTP servers, or live LLM/CDC WONDER APIs). Excluded by default — run with `-m integration`.",
]
addopts = "-m \"not integration\""
